Fixing button layout issues

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -274,7 +274,7 @@
 
 .resource-buttons-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 1.5rem;
 }
@@ -288,12 +288,9 @@
     border-radius: 10px;
     padding: 1rem 2rem;
     margin-bottom: 1rem;
-    margin-right: 2rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
     cursor: pointer;
-}
-
-.last-resource-button {
-    margin-right: 0rem;
 }
 
 @media (max-width: 750px) {
